rnsc/test_data/integration/error/parser/class_header/missing_class_name.rns
.class ; class name is missing
.super java/lang/Object
.end